cambios minimos de estrucura

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   alt="cinema"
                 />
                 <div class="carousel-caption d-none d-md-block">
-                  <h1 class="font-header text-light fs-1">HOME</h1>
+                  <h1 class="font-header text-light ">HOME</h1>
                   <p class="text-light">WE FIND PERFECT EVENTS FOR YOU</p>
                 </div>
               </div>
